Add cypress as devdep for typing

--- a/packages/interactor/package.json
+++ b/packages/interactor/package.json
@@ -35,6 +35,7 @@
     "@types/lodash.isequal": "^4.5.5",
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.13.4",
+    "cypress": "^5.6.0",
     "dtslint": "^3.5.2",
     "expect": "^24.9.0",
     "express": "^4.17.1",
